--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     padding: 0;
     margin: 0;
@@ -12,29 +11,33 @@
     padding-top: 20px;
 }
 
-#toplinks ul{
-     list-style-type: none;
+#toplinks ul {
+    list-style-type: none;
 }
 
-#topLinks  li{
+#topLinks li {
     float: left;
-   list-style-type: none;
-   
-}  
+    list-style-type: none;
+
+}
 
 #topLinks li a {
-      color: #333;
-      text-align: center;
-      padding: 16px;
-      text-decoration: none;
-      -webkit-transition: all 250ms ease-out;
-      -ms-transition: all 250ms ease-out;
-      transition: all 250ms ease-out;
+    color: #333;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+    -webkit-transition: all 250ms ease-out;
+    -ms-transition: all 250ms ease-out;
+    transition: all 250ms ease-out;
 }
-  
+
 #topMenu {
     height: 60px;
     margin: 0 15px;
+}
+
+.topMenu {
+    border-bottom: 1px solid lightgray;
 }
 
 #topMenu .logo {
@@ -59,9 +62,10 @@
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
-    color:turquoise;
-    float:right;
-    padding-top: 20px;;
+    color: turquoise;
+    float: right;
+    padding-top: 20px;
+    ;
 }
 
 .about-us .left-column {
@@ -70,27 +74,27 @@
     padding-top: 2em;
 }
 
-.left-column{
+.left-column {
     text-align: center;
     padding-left: 3em;
 }
 
-.right-column{
+.right-column {
     text-align: center;
     padding-right: 3em;
 }
 
-.about-us .right-column{
+.about-us .right-column {
     width: 0%;
 }
 
-.about-us  {
+.about-us {
     margin: 1em 1.2em;
 }
 
-.left-column h2{
+.left-column h2 {
     padding-bottom: 1em;
-    color:red
+    color: red
 }
 
 .about-us .right-column img {
@@ -104,11 +108,11 @@
 }
 
 .services {
-    margin: 2em;  
+    margin: 2em;
 }
 
 .services .service-content {
-    width:30%;
+    width: 30%;
     float: left;
     padding: 5px;
     border: 1px solid grey;
@@ -120,7 +124,7 @@
 }
 
 hr {
-    margin:1.2em 0;
+    margin: 1.2em 0;
 }
 
 
@@ -129,10 +133,10 @@ table tr td {
     padding: 20px;
 }
 
-table tr td  h3{
+table tr td h3 {
     text-align: left;
-    color:#333;
-    font-size:15px
+    color: #333;
+    font-size: 15px
 }
 
 table {
@@ -144,44 +148,92 @@ table {
     float: left;
     text-align: center;
 }
+
 .feature .rightColumn {
     margin-left: 50%;
     width: 50%;
     text-align: center;
 }
+
 .feature .leftColumn .text,
 .feature .rightColumn .text {
-        padding: 80px 20px 20px 20px;
-        min-height: 260px;
+    padding: 80px 20px 20px 20px;
+    min-height: 260px;
 }
+
 .feature .leftColumn .text a,
 .feature .rightColumn .text a {
-            -webkit-transition: all 250ms ease-out;
-            -ms-transition: all 250ms ease-out;
-            transition: all 250ms ease-out;
-            padding: 20px;
-            background-color: #4392F1;
-            color: white;
-            text-decoration: none;
-            border-radius: 30px;
- }
+    -webkit-transition: all 250ms ease-out;
+    -ms-transition: all 250ms ease-out;
+    transition: all 250ms ease-out;
+    padding: 20px;
+    background-color: #4392F1;
+    color: white;
+    text-decoration: none;
+    border-radius: 30px;
+}
 
 
- .welcome h1 {
+.welcome h1 {
     text-align: center;
     /* font-family: 'Inter Tight', sans-serif; */
     font-family: 'Oswald', sans-serif;
     color: rgb(2, 51, 51);
-    margin: 1em 0 2em 0; 
- }
+    margin: 1em 0 2em 0;
+}
 
 
- .abt-desc {
+.abt-desc {
     margin: 1em 2em 2em 2em;
- }
+}
 
- .abt-desc p {
+.abt-desc p {
     font-size: 1.4em;
     text-align: justify;
     line-height: 1.6em;
- }
+}
+
+
+
+.services-header {
+    text-align: center;
+    margin-top: 2em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.services-header p {
+    margin-top: 0.5em;
+    text-align: center;
+    width: 50%;
+    margin-left: 25%;
+    margin-bottom: 3em;
+}
+
+.services-box .box {
+    width: 400px;
+    height: 400px;
+    border: 1px solid black;
+    margin: 2em 2em 2em 8em;
+    float: left;
+}
+
+
+
+.logo-box {
+    width: 80px;
+    height: 80px;
+    border: 1px solid lightgray;
+    margin-left: 40%;
+    margin-top: 10%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3em;
+}
+
+.content {
+    width: 90%;
+    margin-left: 5%;
+    font-size: large;
+}
